rack/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rackweb-ingress
  labels:  
    app: rackweb
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /rack
        backend:
          serviceName: rackweb
          servicePort: 80
